Revision history for Perl extension AnyEvent.

4.9
	- Glib silently fails when registering a timeout with
          a negative value, so avoid that.
        - check rbuf_max condition only after trying to consume
          data.
	- normalise signal numbers to names when using the ae's
          signal handling, but do not document this (yet).
        - pure perl signal emulation did not properly set nonblocking
          mode on the signal pipe on win32 (this is unlikely to have caused
          any issues).
        - new module: AnyEvent::Debug.
        - AnyEvent::Strict now checks that a signal was specified
          by name (not name or number).
        - reduce memory footprint in typical cases by ~50kb by
          only compiling signal code when necessary.
        - add AnyEvent::Handle->rbuf_max.
        - grab the AE namespace for future new API, implement stubs for
          said future/alternative API.

4.881 Tue Jul 28 12:51:53 CEST 2009
	- work around a bug in local in pre-5.10 perls, causing
          AnyEvent::Handle to recurse when it should not
          (analyzed by elmex).

4.88 Tue Jul 28 04:04:37 CEST 2009
	- re-bless the handle into a dummy package after calling
          AnyEvent::Handle::destroy, so the user does not need to check
          for errors after every push_write etc.
        - do not attempt to run t/02_signals.t on obviously broken
          platforms.

4.87 Sun Jul 26 02:06:16 CEST 2009
	- do not attempt to linger when there is no longer a valid fh.
        - enforce tls mode to be either accept or connect, do not simply
          segfault in Net::SSLeay.
        - AnyEvent::Handle can now call tcp_connect itself (new parameters
          connect, on_prepare, on_connect and on_connect_error). Updated
          tutorial accordingly.
	- add AnyEvent::Impl::Irssi backend.

4.86 Mon Jul 20 23:52:29 CEST 2009
	- since the verbose warning is not enough, explicitly document